refactor(builder): improve question editing and form validation
- Replace direct editor opening with question dialog for better UX
- Add input validation for question options and scale settings
- Fix flex layout issues in right panel
- Replace template reference variables with ids for drop lists

--- a/src/app/builder/builder.component.html
+++ b/src/app/builder/builder.component.html
@@ -81,7 +81,7 @@
     <div
       class="component-list"
       cdkDropList
-      #componentList="cdkDropList"
+      id="componentList"
       [cdkDropListConnectedTo]="['formDropList']"
       [cdkDropListData]="componentItems"
       [cdkDropListSortingDisabled]="true"
@@ -161,7 +161,7 @@
     <div
       class="questions-container"
       cdkDropList
-      #formDropList="cdkDropList"
+      id="formDropList"
       [cdkDropListConnectedTo]="['componentList']"
       [cdkDropListData]="formDef.pages[selectedPage].elements"
       (cdkDropListDropped)="dropFromToolbox($event)"
