feat(preview): enhance survey preview dialog with responsive design and new question types
- Add mobile/desktop view toggle and progress bar
- Implement responsive layout and styling improvements
- Support all question types with appropriate input components
- Improve accessibility and visual hierarchy

--- a/src/app/builder/question-dialog.component.html
+++ b/src/app/builder/question-dialog.component.html
@@ -129,6 +129,7 @@
           class="options-list"
           cdkDropList
           (cdkDropListDropped)="dropOption($event)"
+          formArrayName="offeredAnswers"
         >
           <div
             *ngFor="let answer of offeredAnswers.controls; let i = index"
@@ -327,7 +328,7 @@
                   <mat-icon>add</mat-icon>
                 </button>
               </div>
-              <div class="column-items">
+              <div class="column-items" formArrayName="rows">
                 <div
                   *ngFor="let row of gridRows.controls; let i = index"
                   class="grid-item"
@@ -358,7 +359,7 @@
                   <mat-icon>add</mat-icon>
                 </button>
               </div>
-              <div class="column-items">
+              <div class="column-items" formArrayName="cols">
                 <div
                   *ngFor="let col of gridCols.controls; let i = index"
                   class="grid-item"
@@ -408,6 +409,7 @@
           class="options-list"
           cdkDropList
           (cdkDropListDropped)="dropPriority($event)"
+          formArrayName="priorityList"
         >
           <div
             *ngFor="let item of priorityList.controls; let i = index"
