--- a/src/app/builder/question-editor.component.html
+++ b/src/app/builder/question-editor.component.html
@@ -12,16 +12,24 @@
     <mat-form-field appearance="outline" class="full">
       <mat-label>Type</mat-label>
       <mat-select formControlName="type">
-        <mat-option value="text">Text</mat-option>
-        <mat-option value="textarea">Textarea</mat-option>
-        <mat-option value="radio">Radio</mat-option>
-        <mat-option value="checkbox">Checkbox</mat-option>
-        <mat-option value="grid">Grid</mat-option>
-        <mat-option value="priority">Priority</mat-option>
-        <mat-option value="select">Select</mat-option>
+        <mat-option value="text">Short Text</mat-option>
+        <mat-option value="textarea">Long Text</mat-option>
+        <mat-option value="email">Email</mat-option>
+        <mat-option value="phone">Phone</mat-option>
+        <mat-option value="number">Number</mat-option>
+        <mat-option value="url">Website</mat-option>
         <mat-option value="date">Date</mat-option>
         <mat-option value="time">Time</mat-option>
-        <mat-option value="scale">Scale</mat-option>
+        <mat-option value="radio">Single Choice</mat-option>
+        <mat-option value="checkbox">Multiple Choice</mat-option>
+        <mat-option value="select">Dropdown</mat-option>
+        <mat-option value="scale">Linear Scale</mat-option>
+        <mat-option value="rating">Star Rating</mat-option>
+        <mat-option value="nps">NPS Score</mat-option>
+        <mat-option value="grid">Matrix Grid</mat-option>
+        <mat-option value="priority">Ranking</mat-option>
+        <mat-option value="file">File Upload</mat-option>
+        <mat-option value="signature">Signature</mat-option>
       </mat-select>
     </mat-form-field>
     <div
